--- a/src/pages/pub.astro
+++ b/src/pages/pub.astro
@@ -16,7 +16,7 @@ const appearances = {
         date: "19 May 2023",
         link: "",
         type: "talk",
-        img: "tortilla.jpeg",
+        img: "/tortilla.jpeg",
       },
       {
         name: "Science Odyssey ปรากฏการณ์หนีตามวิทยาศาสตร์",
@@ -24,7 +24,7 @@ const appearances = {
         date: " 31 March 2023",
         link: "https://www.youtube.com/watch?v=H4pBwLyJ6MI",
         type: "panel",
-        img: "book.jpeg",
+        img: "/book.jpeg",
       },
       {
         name: "Reality is not what it seems opening panel",
@@ -32,14 +32,14 @@ const appearances = {
         date: "23 april 2021",
         link: "https://web.facebook.com/SophiaPublishing/videos/%E0%B8%A1%E0%B8%B2%E0%B9%81%E0%B8%A5%E0%B9%89%E0%B8%A7-sophia-readival-%E0%B8%81%E0%B8%B1%E0%B8%9A%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B9%80%E0%B8%9B%E0%B8%B4%E0%B8%94%E0%B8%95%E0%B8%B1%E0%B8%A7%E0%B8%AB%E0%B8%99%E0%B8%B1%E0%B8%87%E0%B8%AA%E0%B8%B7%E0%B8%AD%E0%B9%80%E0%B8%A5%E0%B9%88%E0%B8%A1%E0%B9%81%E0%B8%A3%E0%B8%81%E0%B8%82%E0%B8%AD%E0%B8%87%E0%B8%AA%E0%B8%B3%E0%B8%99%E0%B8%B1%E0%B8%81%E0%B8%9E%E0%B8%B4%E0%B8%A1%E0%B8%9E%E0%B9%8C-2/3846079268803766?_rdc=1&_rdr",
         type: "panel",
-        img: "sophia.png",
+        img: "/sophia.png",
       },
       {
         name: "How to drink bubble tea or (finding the underlying patterns of the universe)",
         host: "TEDxUTCC 2021",
         date: "21 March 2021",
         type: "talk",
-        img: "ted.jpeg",
+        img: "/ted.jpeg",
       },
       {
         name: "they dig into the soil and talk by the hole",
@@ -47,7 +47,7 @@ const appearances = {
         date: "30 January 2021",
         link: "https://bookshoplibrary.com/activity/archive/y-2021/they-dig-into-the-soil-and-talk-by-the-hole/",
         type: "panel",
-        img: "bccg.avif",
+        img: "/bccg.avif",
       },
       {
         name: "Building an open source dna storage algorithm for a space mission",
@@ -55,7 +55,7 @@ const appearances = {
         date: "17 october 2020",
         link: "https://www.facebook.com/StupidHackTH/posts/1284881585178078",
         type: "talk",
-        img: "hacktober.jpeg",
+        img: "/hacktober.jpeg",
       },
     ],
   },
@@ -68,7 +68,7 @@ const appearances = {
         date: "August 2022",
         link: "https://www.facebook.com/watch/live/?v=789068861666134&ref=search",
         type: "interview",
-        img: "sarakadee.jpeg",
+        img: "/sarakadee.jpeg",
       },
       {
         name: "การศึกษาไทยพัฒนาอุตสาหกรรมอวกาศได้แค่ไหน ฟังมุมมองจากผู้ทำสื่อ SPACETH.CO",
@@ -76,7 +76,7 @@ const appearances = {
         date: "20 July 2022",
         link: "https://www.facebook.com/watch/live/?v=789068861666134&ref=search",
         type: "interview",
-        img: "people.webp",
+        img: "/people.webp",
       },
     ],
   },
@@ -89,7 +89,7 @@ const appearances = {
         date: "2021",
         link: "https://www.facebook.com/watch/live/?v=789068861666134&ref=search",
         type: "interview",
-        img: "toi15.webp",
+        img: "/toi15.webp",
       },
       {
         name: "Mahidol Science Communicator Award 2022",
@@ -97,7 +97,7 @@ const appearances = {
         date: "28 october 2022",
         link: "https://www.facebook.com/watch/live/?v=789068861666134&ref=search",
         type: "interview",
-        img: "mahidol.jpeg",
+        img: "/mahidol.jpeg",
       },
       {
         name: "People of the year award 2022",
@@ -105,7 +105,7 @@ const appearances = {
         date: " 7 april 2022",
         link: "https://www.facebook.com/watch/live/?v=789068861666134&ref=search",
         type: "interview",
-        img: "peopleaward.jpeg",
+        img: "/peopleaward.jpeg",
       },
     ],
   },
