--- a/src/pages/e/[...slug].astro
+++ b/src/pages/e/[...slug].astro
@@ -21,9 +21,9 @@ const { Content } = await post.render();
 
 <BaseLayout footer={false}>
     <main class="grid gap-4 mb-4">
-      <Menu cur="(Back to Entries)" url="/e" />
+      <Menu cur="(Back to 🪴)" url="/e" />
       <h2 class="text-4xl">
-        {post.data.title}
+        <a class="text-teal-500" href="/e">🪴 Garden</a> / {post.data.title}
       </h2>
       <div class="relative mx-2">
           <Draggable x={-30} alwaysShow={true} client:load>
