--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -30,4 +30,7 @@ const { dir, cur, url } = Astro.props;
   .selected {
     @apply text-teal-500 font-medium;
   }
+  a {
+    @apply hover:text-neutral-950 hover:bg-yellow-300
+  }
 </style>
