--- a/src/pages/e/[...slug].astro
+++ b/src/pages/e/[...slug].astro
@@ -37,6 +37,6 @@ const { Content } = await post.render();
       </div>
     </main>
     <Draggable x={30} bottom={true} show={false} fixed={true} color={"md:bg-green-50"} custom={"hidden md:block"} client:load>
-            <a class="text-purple-500 font-medium hover:bg-yellow-300 hover:text-neutral-950" href="/e">(Back to 🪴)</a>
+            <a class="text-purple-500 font-medium hover:bg-yellow-300 hover:text-neutral-950 px-3 py-2 rounded-md bg-neutral-100 border-2 border-neutral-300" href="/e">(Back to 🪴)</a>
     </Draggable>
 </BaseLayout>
