--- a/src/pages/p/conway/index.astro
+++ b/src/pages/p/conway/index.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../../../layouts/BaseLayout.astro"
-import Conway from "../../../components/Conway.svelte"
+import Conway from "./Conway.svelte"
 import Levels from "./levels.svelte"
 import Draggable from "../../../components/Draggable.svelte"
 import "../../../styles/global.css";
