--- a/src/pages/pub.astro
+++ b/src/pages/pub.astro
@@ -121,7 +121,9 @@ const appearances = {
         </div>
         <div class="hidden md:block" aria-hidden="true">
           <Draggable x={-20} y={10} show={false} client:load>
+          <div class="md:w-[40rem] lg:w-[48rem]">
             <Content />
+            </div>
           </Draggable>
         </div>
       </div>
