--- a/src/pages/e/[...slug].astro
+++ b/src/pages/e/[...slug].astro
@@ -26,7 +26,7 @@ const { Content } = await post.render();
         {post.data.title}
       </h2>
       <div class="relative mx-2">
-          <div class="md:hidden prose prose-lg md:w-[48rem]">
+          <div class="md:hidden prose prose-lg md:w-[40rem] lg:w-[48rem]">
               <Content />
             </div>
           <Draggable custom={"hidden md:block"} x={-30} alwaysShow={true} client:load>
