--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,37 +5,37 @@
  */
 
 @font-face {
-  font-family: "Basier Circle";
-  src: url("/fonts/basier-regular.woff2") format("woff2");
-  font-weight: 400;
-  font-style: regular;
+	font-family: 'Basier Circle';
+	src: url('/fonts/basier-regular.woff2') format('woff2');
+	font-weight: 400;
+	font-style: regular;
 }
 
 @font-face {
-  font-family: "Basier Circle";
-  src: url("/fonts/basier-medium.woff2") format("woff2");
-  font-weight: 500;
-  font-style: regular;
+	font-family: 'Basier Circle';
+	src: url('/fonts/basier-medium.woff2') format('woff2');
+	font-weight: 500;
+	font-style: regular;
 }
 
 @font-face {
-  font-family: "Voxel";
-  src: url("/fonts/voxel.otf") format("opentype");
-  font-weight: 500;
-  font-style: regular;
+	font-family: 'Voxel';
+	src: url('/fonts/voxel.otf') format('opentype');
+	font-weight: 500;
+	font-style: regular;
 }
 
 :root {
 }
 
 body {
-  font-family: "Basier Circle", "Anuphan", sans-serif;
-  @apply mx-auto py-2 md:px-4 lg:px-0 md:py-8  min-h-[100vh];
+	font-family: 'Basier Circle', 'Anuphan', sans-serif;
+	@apply mx-auto min-h-[100vh] py-2 md:px-4 md:py-8  lg:px-0;
 }
 
 main {
-  @apply mx-auto max-w-3xl;
-  padding: 0;
+	@apply mx-auto max-w-3xl;
+	padding: 0;
 }
 h1,
 h2,
@@ -43,94 +43,94 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "voxel", sans-serif;
+	font-family: 'voxel', sans-serif;
 }
 h1 {
-  font-size: 3.052em;
+	font-size: 3.052em;
 }
 h2 {
-  font-size: 2.441em;
+	font-size: 2.441em;
 }
 h3 {
-  font-size: 1.953em;
-  font-family: "Basier Circle", sans-serif;
+	font-size: 1.953em;
+	font-family: 'Basier Circle', sans-serif;
 }
 h4 {
-  font-size: 1.563em;
+	font-size: 1.563em;
 }
 h5 {
-  font-size: 1.25em;
+	font-size: 1.25em;
 }
 strong,
 b {
-  font-weight: 700;
+	font-weight: 700;
 }
 
 .prose a {
-  font-family: "Voxel", Anuphan, san-serif;
-  font-weight: 400;
+	font-family: 'Voxel', Anuphan, san-serif;
+	font-weight: 400;
 }
 
 textarea {
-  width: 100%;
-  font-size: 16px;
+	width: 100%;
+	font-size: 16px;
 }
 input {
-  font-size: 16px;
+	font-size: 16px;
 }
 table {
-  width: 100%;
+	width: 100%;
 }
 img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 8px;
+	max-width: 100%;
+	height: auto;
+	border-radius: 8px;
 }
 code {
-  padding: 2px 5px;
-  background-color: rgb(var(--gray-light));
-  border-radius: 2px;
+	padding: 2px 5px;
+	background-color: rgb(var(--gray-light));
+	border-radius: 2px;
 }
 pre {
-  padding: 1.5em;
-  border-radius: 8px;
+	padding: 1.5em;
+	border-radius: 8px;
 }
 pre > code {
-  all: unset;
+	all: unset;
 }
 blockquote {
-  border-left: 4px solid var(--accent);
-  padding: 0 0 0 20px;
-  margin: 0px;
-  font-size: 1.333em;
+	border-left: 4px solid var(--accent);
+	padding: 0 0 0 20px;
+	margin: 0px;
+	font-size: 1.333em;
 }
 hr {
-  border: none;
-  border-top: 1px solid rgb(var(--gray-light));
+	border: none;
+	border-top: 1px solid rgb(var(--gray-light));
 }
 @media (max-width: 720px) {
-  body {
-    font-size: 18px;
-  }
-  main {
-    padding: 1em;
-  }
+	body {
+		font-size: 18px;
+	}
+	main {
+		padding: 1em;
+	}
 }
 
 .sr-only {
-  border: 0;
-  padding: 0;
-  margin: 0;
-  position: absolute !important;
-  height: 1px;
-  width: 1px;
-  overflow: hidden;
-  /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
-  clip: rect(1px 1px 1px 1px);
-  /* maybe deprecated but we need to support legacy browsers */
-  clip: rect(1px, 1px, 1px, 1px);
-  /* modern browsers, clip-path works inwards from each corner */
-  clip-path: inset(50%);
-  /* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
-  white-space: nowrap;
+	border: 0;
+	padding: 0;
+	margin: 0;
+	position: absolute !important;
+	height: 1px;
+	width: 1px;
+	overflow: hidden;
+	/* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
+	clip: rect(1px 1px 1px 1px);
+	/* maybe deprecated but we need to support legacy browsers */
+	clip: rect(1px, 1px, 1px, 1px);
+	/* modern browsers, clip-path works inwards from each corner */
+	clip-path: inset(50%);
+	/* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
+	white-space: nowrap;
 }
