--- a/src/pages/me.astro
+++ b/src/pages/me.astro
@@ -4,7 +4,7 @@ import Menu from '../components/Menu.astro'
 import History from '../components/History.svelte'
 import Draggable from '../components/Draggable.svelte'
 
-import { Content } from '../content/main/pub.md'
+import { Content } from '../content/main/me.md'
 
 const appearances = {
 	talks: {
