--- a/src/pages/p/thaiui/colorTest.astro
+++ b/src/pages/p/thaiui/colorTest.astro
@@ -44,7 +44,7 @@ const ls = [...Array(33).keys()].map((x) => x * 3).reverse()
 				hs.map((h) => (
 					<div class="flex flex-col">
 						{ls.map((l) => (
-							<div class="aspect-square w-2" style={`background-color: oklch(${l}% 0.8 ${h})`} />
+							<div class="aspect-square w-2" style={`background-color: oklch(0% 0.8 ${h})`} />
 						))}
 					</div>
 				))
