--- a/src/pages/g/[...slug].astro
+++ b/src/pages/g/[...slug].astro
@@ -21,7 +21,7 @@ const { Content } = await post.render()
 
 <BaseLayout footer={false}>
 	<main class="mb-4 grid gap-4">
-		<Menu cur="(Back to 🪴)" url="/e" />
+		<Menu dir="garden" />
 		<h2 class="text-4xl">
 			{post.data.title}
 		</h2>
@@ -47,7 +47,7 @@ const { Content } = await post.render()
 	>
 		<a
 			class="rounded-md border-2 border-neutral-300 bg-neutral-100 px-3 py-2 font-medium text-purple-500 hover:bg-yellow-300 hover:text-neutral-950"
-			href="/e">(Back to 🪴)</a
+			href="/g">(Back to 🪴)</a
 		>
 	</Draggable>
 </BaseLayout>
