--- a/src/pages/p/conway/index.astro
+++ b/src/pages/p/conway/index.astro
@@ -11,7 +11,7 @@ import '../../../styles/global.css'
 	<Draggable x={30} bottom={true} show={false} fixed={true} custom={'hidden md:block'} client:load>
 		<a
 			class="rounded-md border-2 border-neutral-300 bg-neutral-100 px-3 py-2 font-medium text-purple-500 hover:bg-yellow-300 hover:text-neutral-950"
-			href="/pub">(Back)</a
+			href="/me">(Back)</a
 		>
 	</Draggable>
 </BaseLayout>
