feat: minor redesign

--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -3,8 +3,8 @@ const { dir, cur, url } = Astro.props
 ---
 
 <div class="mt-2 flex flex-col gap-4">
-	<h1 class="text-4xl lg:text-6xl">👋 Hi, my name is Pub.</h1>
-	<h1 class="text-4xl lg:text-6xl">I live in Bangkok.</h1>
+	<h1 style="font-family: Voxel" class="mb-1 text-4xl lg:text-6xl">👋 Hi there, it's Pub</h1>
+	<!-- <h1 class="text-3xl lg:text-5xl">I live in Bangkok.</h1> -->
 
 	<ul class="mb-4 flex gap-4">
 		<li class={`${dir === 'stories' ? 'selected' : ''}`}>
