--- a/src/pages/crafts.astro
+++ b/src/pages/crafts.astro
@@ -33,9 +33,12 @@ const r = [
 <BaseLayout>
 	<main class="grid gap-4">
 		<Menu dir="crafts" />
-		<div
+		<!-- <div
 			class="prose prose-lg grid gap-x-8 prose-headings:m-0 prose-p:col-span-2 prose-li:mt-0 prose-ul:col-span-2 prose-img:mb-3 prose-img:mt-0 prose-img:aspect-video prose-img:object-cover md:grid-cols-3"
 		>
+			<Content components={{ Gallery }} />
+		</div> -->
+		<div class="prose-content -mt-6">
 			<Content components={{ Gallery }} />
 		</div>
 		<Draggable
