--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,17 +16,17 @@ const posts = await Astro.glob('../content/garden/*.md')
 <BaseLayout>
 	<main class="grid gap-4">
 		<Menu dir="stories" />
-		<div class="prose prose-lg">
+		<div class="prose prose-lg prose-img:aspect-video prose-img:object-cover">
 			<Content components={{ Gallery }} />
 		</div>
-		<div class="hidden xl:block">
+		<!-- <div class="hidden xl:block">
 			<Draggable x={30} y={520} p="md:p-2" rand={true} fixed={true} client:load>
 				<div class="grid gap-4">
 					<div>(Pub at TEDxUTCC)</div>
 					<img src="ted.jpeg" class="w-48 rounded-sm" />
 				</div>
 			</Draggable>
-		</div>
+		</div> -->
 	</main>
 </BaseLayout>
 
