--- a/src/pages/me.astro
+++ b/src/pages/me.astro
@@ -5,111 +5,7 @@ import History from '../components/History.svelte'
 import Draggable from '../components/Draggable.svelte'
 
 import { Content } from '../content/main/me.md'
-
-const appearances = {
-	talks: {
-		text: 'Talks & Panels',
-		list: [
-			{
-				name: 'Tortilla Endofunctors, and More Jokes about Monads',
-				host: 'Functional Programming Meetup',
-				date: '19 May 2023',
-				link: '',
-				type: 'talk',
-				img: '/tortilla.jpeg'
-			},
-			{
-				name: 'Science Odyssey ปรากฏการณ์หนีตามวิทยาศาสตร์',
-				host: 'National Book Fair 2023 / Matichon / Sundogs',
-				date: ' 31 March 2023',
-				link: 'https://www.youtube.com/watch?v=H4pBwLyJ6MI',
-				type: 'panel',
-				img: '/book.jpeg'
-			},
-			{
-				name: 'Reality is not what it seems opening panel',
-				host: 'Sophia Publishing',
-				date: '23 april 2021',
-				link: 'https://web.facebook.com/SophiaPublishing/videos/%E0%B8%A1%E0%B8%B2%E0%B9%81%E0%B8%A5%E0%B9%89%E0%B8%A7-sophia-readival-%E0%B8%81%E0%B8%B1%E0%B8%9A%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B9%80%E0%B8%9B%E0%B8%B4%E0%B8%94%E0%B8%95%E0%B8%B1%E0%B8%A7%E0%B8%AB%E0%B8%99%E0%B8%B1%E0%B8%87%E0%B8%AA%E0%B8%B7%E0%B8%AD%E0%B9%80%E0%B8%A5%E0%B9%88%E0%B8%A1%E0%B9%81%E0%B8%A3%E0%B8%81%E0%B8%82%E0%B8%AD%E0%B8%87%E0%B8%AA%E0%B8%B3%E0%B8%99%E0%B8%B1%E0%B8%81%E0%B8%9E%E0%B8%B4%E0%B8%A1%E0%B8%9E%E0%B9%8C-2/3846079268803766?_rdc=1&_rdr',
-				type: 'panel',
-				img: '/sophia.png'
-			},
-			{
-				name: 'How to drink bubble tea or (finding the underlying patterns of the universe)',
-				host: 'TEDxUTCC 2021',
-				date: '21 March 2021',
-				type: 'talk',
-				img: '/ted.jpeg'
-			},
-			{
-				name: 'they dig into the soil and talk by the hole',
-				host: 'Bangkok CityCity Gallery',
-				date: '30 January 2021',
-				link: 'https://bookshoplibrary.com/activity/archive/y-2021/they-dig-into-the-soil-and-talk-by-the-hole/',
-				type: 'panel',
-				img: '/bccg.avif'
-			},
-			{
-				name: 'Building an open source dna storage algorithm for a space mission',
-				host: 'Hacktoberfest Thailand 2020',
-				date: '17 october 2020',
-				link: 'https://www.facebook.com/StupidHackTH/posts/1284881585178078',
-				type: 'talk',
-				img: '/hacktober.jpeg'
-			}
-		]
-	},
-	interviews: {
-		text: 'Interviews',
-		list: [
-			{
-				name: 'นิตยสาร สารคดี ฉบับที่ 449 สิงหาคม 2565 Space Mission',
-				host: 'Sarakadee Magazine',
-				date: 'August 2022',
-				link: 'https://www.facebook.com/watch/live/?v=789068861666134&ref=search',
-				type: 'interview',
-				img: '/sarakadee.jpeg'
-			},
-			{
-				name: 'การศึกษาไทยพัฒนาอุตสาหกรรมอวกาศได้แค่ไหน ฟังมุมมองจากผู้ทำสื่อ SPACETH.CO',
-				host: 'The People ',
-				date: '20 July 2022',
-				link: 'https://www.facebook.com/watch/live/?v=789068861666134&ref=search',
-				type: 'interview',
-				img: '/people.webp'
-			}
-		]
-	},
-	awards: {
-		text: 'Awards & Speeches',
-		list: [
-			{
-				name: 'The 15th Thailand Olympiad in Informatics (Bronze Medal)',
-				host: 'IPST',
-				date: '2021',
-				link: 'https://www.facebook.com/watch/live/?v=789068861666134&ref=search',
-				type: 'interview',
-				img: '/toi15.webp'
-			},
-			{
-				name: 'Mahidol Science Communicator Award 2022',
-				host: 'Mahidol University',
-				date: '28 october 2022',
-				link: 'https://www.facebook.com/watch/live/?v=789068861666134&ref=search',
-				type: 'interview',
-				img: '/mahidol.jpeg'
-			},
-			{
-				name: 'People of the year award 2022',
-				host: 'The People',
-				date: ' 7 april 2022',
-				link: 'https://www.facebook.com/watch/live/?v=789068861666134&ref=search',
-				type: 'interview',
-				img: '/peopleaward.jpeg'
-			}
-		]
-	}
-}
+import { Content as More } from '../content/main/more.md'
 ---
 
 <BaseLayout>
@@ -127,51 +23,8 @@ const appearances = {
 				</Draggable>
 			</div>
 		</div>
-
-		<div class="my-4 grid gap-8">
-			{
-				Object.entries(appearances).map(([k, v]) => {
-					return (
-						<div id={k}>
-							<h2 class="mb-1 text-[1.75rem] font-medium">{v.text}</h2>
-							<div class="columns gap-6 md:columns-2">
-								{v.list.map((x) => {
-									return (
-										<a class="mb-6 grid break-inside-avoid-column hover:underline " href={x.link}>
-											<img src={x.img} class="mb-3 w-full" />
-											<p>
-												<span class="font-medium">{x.host} · </span>
-												{x.name}
-											</p>
-										</a>
-									)
-								})}
-							</div>
-						</div>
-					)
-				})
-			}
-		</div>
-		<div id="classes" class="prose prose-lg">
-			<h2>Classes</h2>
-			<ul>
-				<li>
-					<span>guest lecturer</span> "science communication for life sciences" at mahidol
-					university (2021)
-				</li>
-				<li>
-					<span>guest lecturer</span> “space and lunar exploration for architect” with space zab
-					company at bangkok university (2020)
-				</li>
-				<li>
-					<span>voluntary teaher</span> storytelling class for saturday school at wat pathum wanaram
-					school (2019)
-				</li>
-				<li>
-					<span>guest lecturer</span> the promotion of academic olympiad and development of science
-					education foundation's computer camp at satri mahapruttharam school (2019)
-				</li>
-			</ul>
+		<div class="prose-content prose-ul:list-none prose-ul:m-0 prose-ul:p-0 prose-ul:gap-2 prose-img:m-0">
+            <More />
 		</div>
 	</main>
 </BaseLayout>
