style: minor style fix

--- a/src/pages/me.astro
+++ b/src/pages/me.astro
@@ -23,7 +23,7 @@ import { Content as More } from '../content/main/more.md'
 				</Draggable>
 			</div>
 		</div>
-		<div class="prose-content prose-ul:list-none prose-ul:m-0 prose-ul:p-0 prose-ul:gap-2 prose-img:m-0">
+		<div class="prose prose-lg prose-ul:grid prose-ul:grid-cols-1 md:prose-ul:grid-cols-2 prose-li:m-1 prose-img:aspect-video prose-img:object-cover hover:prose-img:scale-[1.008] prose-img:transition-all prose-ul:list-none prose-ul:m-0 prose-ul:p-0 prose-ul:gap-2 prose-img:m-0">
             <More />
 		</div>
 	</main>
