--- a/src/pages/g/index.astro
+++ b/src/pages/g/index.astro
@@ -4,7 +4,7 @@ import FormattedDate from "../../components/FormattedDate.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import Content from "../../content/main/s.md";
 
-const posts = (await getCollection("s")).filter(
+const posts = (await getCollection("g")).filter(
   (post) => post.data.main === true,
 );
 ---
@@ -16,7 +16,7 @@ const posts = (await getCollection("s")).filter(
       {
         posts.map((post) => (
           <li>
-            <a href={`/s/${post.slug}/`}>{post.data.title}</a>
+            <a href={`/g/${post.slug}/`}>{post.data.title}</a>
           </li>
         ))
       }
