--- a/src/pages/g/[slug].astro
+++ b/src/pages/g/[slug].astro
@@ -18,7 +18,7 @@ const { Content, headings } = await post.render();
 
 <BaseLayout p="Entry">
   <main
-    class="prose prose-img:border prose-img:border-neutral-200 prose-img:shadow-sm prose-p:text-justify"
+    class="prose prose-img:border prose-img:border-neutral-200 prose-img:shadow-sm"
     id="top"
   >
     <h1 class="mb-6 font-normal">
