--- a/src/pages/g/index.astro
+++ b/src/pages/g/index.astro
@@ -2,7 +2,7 @@
 import { getCollection } from "astro:content";
 import FormattedDate from "../../components/FormattedDate.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
-import Content from "../../content/main/s.md";
+import Content from "../../content/main/garden.md";
 
 const posts = (await getCollection("g")).filter(
   (post) => post.data.main === true,
