feat: persistent store

--- a/src/pages/g/[slug].astro
+++ b/src/pages/g/[slug].astro
@@ -30,7 +30,7 @@ const { Content, headings } = await post.render();
   </main>
   <a href="#top">
     <div
-      class="fixed bottom-0 right-0 m-8 p-1 text-lg rounded-full border bg-neutral-50 size-10 flex justify-center items-center hover:shadow-sm transition-all"
+      class="fixed bottom-0 right-0 m-8 p-1 text-lg rounded-full border bg-white size-10 flex justify-center items-center hover:shadow-sm transition-all"
     >
       ⤴
     </div>
