--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -1,7 +1,7 @@
 ---
 // import Menu from "../components/Menu.astro";
 // import Gallery from "../components/Gallery.astro";
-import Draggable from "../components/Draggable.svelte";
+// import Draggable from "../components/Draggable.svelte";
 import BaseLayout from "../layouts/BaseLayout.astro";
 
 import { Content } from "../content/main/work.md";
