--- a/src/pages/g/index.astro
+++ b/src/pages/g/index.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from "astro:content";
-import FormattedDate from "../../components/FormattedDate.astro";
+// import FormattedDate from "../../components/FormattedDate.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import Content from "../../content/main/garden.md";
 
