--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,7 +7,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import Draw from "../components/Draw.svelte";
 import DrawPanel from "../components/DrawPanel.svelte";
 
-const { p } = Astro.props;
+const { p, ...props } = Astro.props;
 ---
 
 <html lang="en">
@@ -53,6 +53,7 @@ const { p } = Astro.props;
         {p === "Entry" ? <Back client:load /> : null}
       </ul>
     </nav>
+
     <div class="hidden fixed lg:flex h-[100svh] top-0 right-0 p-8 items-center">
       <DrawPanel client:load />
     </div>
@@ -61,13 +62,13 @@ const { p } = Astro.props;
     >
       <History client:load />
     </section>
+
     <div id="frame" class="fixed left-0 top-0 -z-10">
       <Draw client:load />
     </div>
-    <!-- <Header title={SITE_TITLE} /> -->
-    <main class="w-full max-w-3xl mx-auto">
+
+    <main class={`w-full max-w-3xl mx-auto ${props?.class}`} {...props}>
       <slot />
     </main>
-    <!-- <Footer /> -->
   </body>
 </html>
