--- a/src/pages/g/index.astro
+++ b/src/pages/g/index.astro
@@ -17,7 +17,7 @@ const posts = (await getCollection("g"))
         posts.map((post) => (
           <li class="">
             <a href={`/g/${post.slug}/`} class="flex m-0 p-0 justify-between">
-              <div>{post.data.title}</div>
+              <div>F{post.data.title}</div>
               <div class="text-neutral-700 hidden md:block">
                 <FormattedDate date={post.data.pubDate as Date} />
               </div>
