--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,7 +7,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import Draw from "../components/Draw.svelte";
 import DrawPanel from "../components/DrawPanel.svelte";
 
-const { p, ...props } = Astro.props;
+const { p, title = undefined, ...props } = Astro.props;
 ---
 
 <html lang="en">
@@ -19,7 +19,7 @@ const { p, ...props } = Astro.props;
       rel="stylesheet"
     />
 
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+    <BaseHead title={title || SITE_TITLE} description={SITE_DESCRIPTION} />
     <!-- <ViewTransitions /> -->
 
     <!-- Google tag (gtag.js) -->
