--- a/src/pages/g/[slug].astro
+++ b/src/pages/g/[slug].astro
@@ -16,7 +16,7 @@ const post = Astro.props;
 const { Content, headings } = await post.render();
 ---
 
-<BaseLayout p="Entry">
+<BaseLayout p="Entry" title={`${post.data.title} | Pub's Site`}>
   <main
     class="prose prose-img:border prose-img:border-neutral-200 prose-img:shadow-sm"
     id="top"
